MDEV-11449 Server crashes in Item_func_or_sum::agg_item_collations.

JSON_ARRAY didn't expect 0 arguments.